# research-agent

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  agent.py  agent.yaml  config.json  create_pr.sh  debug_step_by_step.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  test_contextual_response.py
.cursor/rules/: architecture-design.mdc  code-implementation-design.mdc  common-principles.mdc  implementation-workflow.mdc  project-implementation-design.mdc  python-rules.mdc  requirement-analysis.mdc
.github/workflows/: ci.yml
docs/: TOOL_INTEGRATION_TESTING.md
docs/.architecture_design/: deep_research_agent_architecture.md
docs/.implementation_design/: README.md  base_agent_implementation.md  complete_overview.md  deep_research_agent_implementation.md  llm_service_implementation.md  module_organization.md  phased_implementation_plan.md  source_tracking_implementation.md  temp_file_management.md  testing_strategy.md
docs/.requirement_analysis/: deep_research_agent_requirements.md
examples/: README.md  complete_workflow_example.py  comprehensive_tool_test.py  demo.py  mcp_tool_test.py  phase2_example.py  programmatic_tool_test.py  simple_tool_test.py  simple_tool_test_v2.py  tool_integration_test.py  websocket_server.py
research_agent/: __init__.py
research_agent/base_agent/: agenthub_base.py  base_agent.py  context_manager.py  core.py  error_handler.py
research_agent/core/: research_agent.py
research_agent/llm_service/: __init__.py  client_manager.py  core.py  llm_service.py  mock_service.py  model_config.py  model_detector.py
research_agent/mode_selector/: __init__.py  core.py  mode_selector.py
research_agent/research_agent/: core.py  core_enhanced.py
research_agent/source_tracker/: __init__.py  core.py  source_tracker.py
tests/: test_phase1.py
(+100 files in other folders)
