[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "1.0.0"
description = "Deep research agent for AgentHub - comprehensive information gathering with multiple research modes"
authors = [{ name = "agentplug" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
keywords = ["research", "information-gathering", "ai-assistant", "analysis"]

dependencies = [
    "aisuite[openai]>=0.1.7",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "docstring-parser>=0.17.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
research-agent = "agent:main"

[project.urls]
Homepage = "https://github.com/agentplug/research-agent"
Repository = "https://github.com/agentplug/research-agent"
Issues = "https://github.com/agentplug/research-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["research_agent"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
